--- a/_StratifyLib/html/classui_1_1_event.html
+++ b/_StratifyLib/html/classui_1_1_event.html
@@ -180,7 +180,7 @@ Public Member Functions</h2></td></tr>
 <tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9afd72925eb078bb6a4a1b2cec73a40f87"></a>LIST_ITEM_ACTUATED&#160;</td><td class="fielddoc">
 <p>Actuate an item in a list </p>
 </td></tr>
-<tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9a88429a6a63f3c8f1684335b6141065fd"></a>LIST_ACTUATE&#160;</td><td class="fielddoc">
+<tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9a452161a54fc403f70a27239444bbec07"></a>LIST_ACTUATED&#160;</td><td class="fielddoc">
 <p>Select an item in a list or menu </p>
 </td></tr>
 <tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9a6671c5ac6dfad9cbddbebb2dc1a77727"></a>LIST_UP&#160;</td><td class="fielddoc">
@@ -203,6 +203,9 @@ Public Member Functions</h2></td></tr>
 </td></tr>
 <tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9a616e7f4c5e2849c07181e0a985b97fcd"></a>TAB_RIGHT&#160;</td><td class="fielddoc">
 <p>Slide to the tab on the left </p>
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="a42a295550182c692e0b9ae2b0f5f28f9a68590492a161d3bed81700af8d42db94"></a>MENU_ACTUATED&#160;</td><td class="fielddoc">
+<p>Select the item in the menu </p>
 </td></tr>
 </table>
 
