Updated son and sgfx documentation

--- a/_sgfx/html/group___a_n_i_m_a_t_i_o_n.html
+++ b/_sgfx/html/group___a_n_i_m_a_t_i_o_n.html
@@ -17,7 +17,7 @@ title: Stratify OS Docs
 </div><!-- top -->
 <div class="header">
   <div class="headertitle">
-<div class="title">Graphics Animations</div>  </div>
+<div class="title">Bitmap Animations</div>  </div>
 </div><!--header-->
 <div class="contents">
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
