--- a/_sgfx/html/index.html
+++ b/_sgfx/html/index.html
@@ -20,4 +20,22 @@ title: Stratify OS Docs
 <div class="title">Stratify Graphics Documentation</div>  </div>
 </div><!--header-->
 <div class="contents">
-</div><!-- contents -->
+<div class="textblock"><h2>Introduction </h2>
+<p>The stratify graphics library is designed for working with small displays. It stores bitmaps using 1, 2, 4, or 8 bits per pixel (bpp). The bitmap can then be mapped to a display using a color palette. This approach allows powerful graphics to run on devices with very little memory and then to be mapped to color displays.</p>
+<p>Let's take an example setup with the following hardware:</p>
+<ul>
+<li>Cortex M3 processor with 64KB of RAM</li>
+<li>128x128xRGB565 Display</li>
+</ul>
+<p>The native display requires 32KB of video memory in order to perform fast graphics operations. If you are building a multi-color UI than only uses a few colors, you can use the Stratify Graphics library and represent the UI using 4bpp (16 colors). The UI could be represented in 128*128*4/8 = 8KB of RAM leaving plenty of RAM for other parts of the application.</p>
+<h2>Features </h2>
+<ul>
+<li>Bitmap memory management</li>
+<li>Bitmap Transforms</li>
+<li>Bitmap Coordinates<ul>
+<li>Draw vector graphics and bitmaps using a pen</li>
+<li>Pixel manipulation </li>
+</ul>
+</li>
+</ul>
+</div></div><!-- contents -->
