sgfx doc updates

--- a/_sgfx/html/group___b_m_a_p_o_p.html
+++ b/_sgfx/html/group___b_m_a_p_o_p.html
@@ -19,7 +19,7 @@ title: Stratify OS Docs
   <div class="summary">
 <a href="#func-members">Functions</a>  </div>
   <div class="headertitle">
-<div class="title">Bitmap Transforms</div>  </div>
+<div class="title">Transforms</div>  </div>
 </div><!--header-->
 <div class="contents">
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
