--- a/_sgfx/html/group___c_o_o_r_d.html
+++ b/_sgfx/html/group___c_o_o_r_d.html
@@ -20,7 +20,7 @@ title: Stratify OS Docs
 <a href="#enum-members">Enumerations</a> &#124;
 <a href="#func-members">Functions</a>  </div>
   <div class="headertitle">
-<div class="title">Bitmap Coordinates</div>  </div>
+<div class="title">Coordinates</div>  </div>
 </div><!--header-->
 <div class="contents">
 <a name="details" id="details"></a><h2 class="groupheader">Detailed Description</h2>
