--- a/_sgfx/html/index.html
+++ b/_sgfx/html/index.html
@@ -30,12 +30,11 @@ title: Stratify OS Docs
 <p>The native display requires 32KB of video memory in order to perform fast graphics operations. If you are building a multi-color UI than only uses a few colors, you can use the Stratify Graphics library and represent the UI using 4bpp (16 colors). The UI could be represented in 128*128*4/8 = 8KB of RAM leaving plenty of RAM for other parts of the application.</p>
 <h2>Features </h2>
 <ul>
+<li>Compile time configuration of 1, 2, 4, or 8 bits per pixels</li>
 <li>Bitmap memory management</li>
 <li>Bitmap Transforms</li>
-<li>Bitmap Coordinates<ul>
+<li>Bitmap Coordinates</li>
 <li>Draw vector graphics and bitmaps using a pen</li>
 <li>Pixel manipulation </li>
-</ul>
-</li>
 </ul>
 </div></div><!-- contents -->
