API doc updates

--- a/_StratifyAPI/html/classdraw_1_1_progress_attr.html
+++ b/_StratifyAPI/html/classdraw_1_1_progress_attr.html
@@ -70,7 +70,7 @@ Public Member Functions</h2></td></tr>
   </tr>
 </table>
 </div><div class="memdoc">
-<p>The maxium value for progress </p>
+<p>The maximum value for progress </p>
 
 </div>
 </div>
