--- a/_StratifyAPI/html/classsys_1_1_appfs.html
+++ b/_StratifyAPI/html/classsys_1_1_appfs.html
@@ -122,6 +122,9 @@ Static Public Member Functions</h2></td></tr>
     <tr><td class="paramname">buf</td><td>A pointer to the data to be saved </td></tr>
     <tr><td class="paramname">nbyte</td><td>The number of bytes to save </td></tr>
     <tr><td class="paramname">mount</td><td>The mount path (default is /app) </td></tr>
+    <tr><td class="paramname">update</td><td>A callback that is executed after each page write </td></tr>
+    <tr><td class="paramname">context</td><td>The first argument passed to the <em>update</em> callback </td></tr>
+    <tr><td class="paramname">driver</td><td>Only used with the link API (always zero when called on local device) </td></tr>
   </table>
   </dd>
 </dl>
