--- a/_StratifyAPI/html/classsys_1_1_signal.html
+++ b/_StratifyAPI/html/classsys_1_1_signal.html
@@ -438,11 +438,10 @@ Public Member Functions</h2></td></tr>
   </tr>
 </table>
 </div><div class="memdoc">
-<p>Sends a signal and associated value to a process.</p>
+<p>Sends a signal and associated sigvalue to a process.</p>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
     <tr><td class="paramname">pid</td><td>The process ID of the receiving signal </td></tr>
-    <tr><td class="paramname">value</td><td>The value associated with the signal (user defined) </td></tr>
   </table>
   </dd>
 </dl>
