--- a/_StratifyAPI/html/classui_1_1_menu.html
+++ b/_StratifyAPI/html/classui_1_1_menu.html
@@ -207,6 +207,7 @@ Additional Inherited Members</h2></td></tr>
 <dl class="params"><dt>Parameters</dt><dd>
   <table class="params">
     <tr><td class="paramname">event</td><td>The event to execute </td></tr>
+    <tr><td class="paramname">attr</td><td>The drawing attributes to use for the event </td></tr>
   </table>
   </dd>
 </dl>
