Doc updates and pictures of Stratify Toolbox

--- a/_StratifyAPI/html/classhal_1_1_rtc.html
+++ b/_StratifyAPI/html/classhal_1_1_rtc.html
@@ -153,7 +153,7 @@ Public Member Functions</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-<p>Get RTC time </p>
+<p>Gets RTC time. </p>
 
 </div>
 </div>
@@ -170,7 +170,7 @@ Public Member Functions</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-<p>Set RTC time </p>
+<p>Set RTC time. </p>
 
 </div>
 </div>
