--- a/404.html
+++ b/404.html
@@ -3,6 +3,7 @@ layout: utilitypage
 title: Not Found
 tagline: Page Not Found
 page_source: 404
+permalink: /404.html
 sections:
  intro: 404
  brief: Oops.  We couldn't find the page you wanted.
