--- a/_StratifyOS/html/group___c_o_r_e.html
+++ b/_StratifyOS/html/group___c_o_r_e.html
@@ -312,6 +312,21 @@ Enumerations</h2></td></tr>
 <tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99bad2ca4ca434157076af27187ac0070106"></a>CORE_PERIPH_SDIO&#160;</td><td class="fielddoc">
 <p>SD Input/output </p>
 </td></tr>
+<tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99ba4e127dc022fc930c4abb31ecbdd50338"></a>CORE_PERIPH_SPDIF&#160;</td><td class="fielddoc">
+<p>SPDIF </p>
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99bacd31ef3420892cd74f830402b9db368a"></a>CORE_PERIPH_HDMI&#160;</td><td class="fielddoc">
+<p>HDMI CEC </p>
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99ba4b0364838bdb1832edac65dffcaf1db5"></a>CORE_PERIPH_MCO&#160;</td><td class="fielddoc">
+<p>MCO Pins </p>
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99ba9514286c10afbaa6f03613ab1d2875a4"></a>CORE_PERIPH_DFSDM&#160;</td><td class="fielddoc">
+<p>DFSDM Pins </p>
+</td></tr>
+<tr><td class="fieldname"><a class="anchor" id="gga0cdc50382b3b72c2e4b983c2f2a6f99baa9a168972dc36b431c713d3fad1793a8"></a>CORE_PERIPH_FMP_I2C&#160;</td><td class="fielddoc">
+<p>Fast Mode Plus I2C </p>
+</td></tr>
 </table>
 
 </div>
